# clockify-mcp

./: .gitignore  README.md  pyproject.toml  smithery.yaml
clockify_mcp/: __init__.py  __main__.py  clockify_client.py  config.py  mcp_server.py
clockify_mcp/client/: __init__.py  base.py  clients.py  projects.py  reports.py  tags.py  tasks.py  time_entries.py  users.py  workspaces.py
clockify_mcp/features/: __init__.py  clients.py  projects.py  reports.py  tags.py  tasks.py  time_entries.py  users.py  workspaces.py
