[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clockify-mcp"
version = "0.1.0"
description = "Clockify MCP Server"
readme = "README.md"
authors = [
    {name = "Kyzu Tran", email = "kyzu.tran@gmail.com"}
]
maintainers = [
    {name = "Kyzu Tran", email = "kyzu.tran@gmail.com"}
]
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastmcp",
]

[project.scripts]
clockify-mcp = "clockify_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["clockify_mcp"]
